--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>804</width>
+    <width>850</width>
     <height>555</height>
    </rect>
   </property>
@@ -67,6 +67,7 @@
           <property name="font">
            <font>
             <pointsize>35</pointsize>
+            <weight>75</weight>
             <bold>true</bold>
            </font>
           </property>
@@ -76,7 +77,7 @@ background-image: url(:/logo/background1.jpg);
 </string>
           </property>
           <property name="text">
-           <string>Braille</string>
+           <string>Bangla Braille to Text</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignCenter</set>
@@ -127,7 +128,8 @@ background-image: url(:/logo/background1.jpg);
             </property>
             <property name="font">
              <font>
-              <pointsize>10</pointsize>
+              <pointsize>12</pointsize>
+              <weight>75</weight>
               <bold>true</bold>
              </font>
             </property>
@@ -152,13 +154,13 @@ background-image: url(:/logo/background1.jpg);
             </property>
             <property name="minimumSize">
              <size>
-              <width>150</width>
+              <width>270</width>
               <height>0</height>
              </size>
             </property>
             <property name="font">
              <font>
-              <pointsize>23</pointsize>
+              <pointsize>14</pointsize>
              </font>
             </property>
             <property name="frameShape">
@@ -170,14 +172,37 @@ background-image: url(:/logo/background1.jpg);
            </widget>
           </item>
           <item>
-           <layout class="QVBoxLayout" name="verticalLayout_5">
+           <layout class="QVBoxLayout" name="verticalLayout_4">
             <item>
              <widget class="QPushButton" name="convrtAll">
               <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                 <horstretch>0</horstretch>
                 <verstretch>0</verstretch>
                </sizepolicy>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>270</width>
+                <height>0</height>
+               </size>
+              </property>
+              <property name="font">
+               <font>
+                <pointsize>12</pointsize>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="focusPolicy">
+               <enum>Qt::ClickFocus</enum>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">border-color: blue;
+border-width:2px;
+border-style:outset;
+padding: 5px 10px;
+</string>
               </property>
               <property name="text">
                <string>Convert All</string>
@@ -187,10 +212,33 @@ background-image: url(:/logo/background1.jpg);
             <item>
              <widget class="QPushButton" name="convrt">
               <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                 <horstretch>0</horstretch>
                 <verstretch>0</verstretch>
                </sizepolicy>
+              </property>
+              <property name="minimumSize">
+               <size>
+                <width>270</width>
+                <height>0</height>
+               </size>
+              </property>
+              <property name="font">
+               <font>
+                <pointsize>12</pointsize>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="mouseTracking">
+               <bool>true</bool>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">border-color: blue;
+border-width:2px;
+border-style:outset;
+padding: 5px 10px;
+</string>
               </property>
               <property name="text">
                <string>Convert</string>
@@ -230,7 +278,7 @@ background-image: url(:/logo/background1.jpg);
           <widget class="QWidget" name="scrollAreaWidgetContents">
            <property name="geometry">
             <rect>
-             <x>0</x>
+             <x>2</x>
              <y>0</y>
              <width>248</width>
              <height>408</height>
@@ -247,12 +295,12 @@ background-image: url(:/logo/background1.jpg);
              <rect>
               <x>-11</x>
               <y>-21</y>
-              <width>1011</width>
+              <width>950</width>
               <height>831</height>
              </rect>
             </property>
             <property name="sizePolicy">
-             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+             <sizepolicy hsizetype="Maximum" vsizetype="Expanding">
               <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
@@ -268,7 +316,8 @@ background-image: url(:/logo/background1.jpg);
 margin-top:0px;</string>
             </property>
             <property name="text">
-             <string>Double click any file to see its content here</string>
+             <string>Go to Files -&gt; Open Images to start converting.
+Explore Help -&gt; Instruction for more options.</string>
             </property>
             <property name="alignment">
              <set>Qt::AlignHCenter|Qt::AlignTop</set>
@@ -292,7 +341,8 @@ margin-top:0px;</string>
             </property>
             <property name="font">
              <font>
-              <pointsize>10</pointsize>
+              <pointsize>12</pointsize>
+              <weight>75</weight>
               <bold>true</bold>
               <stylestrategy>PreferDefault</stylestrategy>
              </font>
@@ -315,13 +365,13 @@ margin-top:0px;</string>
            <widget class="OListView" name="resultListView">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Fixed" vsizetype="Expanding">
-              <horstretch>1</horstretch>
+              <horstretch>0</horstretch>
               <verstretch>0</verstretch>
              </sizepolicy>
             </property>
             <property name="minimumSize">
              <size>
-              <width>150</width>
+              <width>270</width>
               <height>0</height>
              </size>
             </property>
@@ -333,7 +383,7 @@ margin-top:0px;</string>
             </property>
             <property name="font">
              <font>
-              <pointsize>23</pointsize>
+              <pointsize>14</pointsize>
              </font>
             </property>
             <property name="frameShape">
@@ -345,33 +395,91 @@ margin-top:0px;</string>
            </widget>
           </item>
           <item>
-           <layout class="QVBoxLayout" name="verticalLayout_4">
+           <layout class="QVBoxLayout" name="verticalLayout_5">
             <item>
              <widget class="QPushButton" name="btnExport">
               <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                 <horstretch>0</horstretch>
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
+              <property name="minimumSize">
+               <size>
+                <width>270</width>
+                <height>15</height>
+               </size>
+              </property>
+              <property name="baseSize">
+               <size>
+                <width>270</width>
+                <height>0</height>
+               </size>
+              </property>
+              <property name="font">
+               <font>
+                <pointsize>12</pointsize>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">border-color: blue;
+border-width:2px;
+border-style:outset;
+padding: 5px 20px;
+</string>
+              </property>
               <property name="text">
                <string>Export</string>
+              </property>
+              <property name="flat">
+               <bool>false</bool>
               </property>
              </widget>
             </item>
             <item>
              <widget class="QPushButton" name="btnPrint">
               <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+               <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
                 <horstretch>0</horstretch>
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
+              <property name="minimumSize">
+               <size>
+                <width>270</width>
+                <height>0</height>
+               </size>
+              </property>
+              <property name="baseSize">
+               <size>
+                <width>10</width>
+                <height>0</height>
+               </size>
+              </property>
+              <property name="font">
+               <font>
+                <pointsize>12</pointsize>
+                <weight>75</weight>
+                <bold>true</bold>
+               </font>
+              </property>
+              <property name="mouseTracking">
+               <bool>true</bool>
+              </property>
               <property name="styleSheet">
-               <string notr="true"/>
+               <string notr="true">border-color: blue;
+border-width:2px;
+border-style:outset;
+padding: 5px 20px;
+</string>
               </property>
               <property name="text">
                <string>Print</string>
+              </property>
+              <property name="flat">
+               <bool>false</bool>
               </property>
              </widget>
             </item>
@@ -390,8 +498,8 @@ margin-top:0px;</string>
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>804</width>
-     <height>22</height>
+     <width>850</width>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFiles">
@@ -407,8 +515,8 @@ margin-top:0px;</string>
     <property name="title">
      <string>Help</string>
     </property>
-    <addaction name="actionContactUs"/>
     <addaction name="actionManuals"/>
+    <addaction name="actionAbout_Us"/>
    </widget>
    <addaction name="menuFiles"/>
    <addaction name="menuHelp"/>
@@ -469,14 +577,9 @@ margin-top:0px;</string>
     <string>Debug Mood</string>
    </property>
   </action>
-  <action name="actionContactUs">
-   <property name="text">
-    <string>Contact Us</string>
-   </property>
-  </action>
   <action name="actionManuals">
    <property name="text">
-    <string>Manuals</string>
+    <string>Instruction</string>
    </property>
   </action>
   <action name="actionRemoveFileForOpen">
@@ -484,9 +587,9 @@ margin-top:0px;</string>
     <string>Remove  Images</string>
    </property>
   </action>
-  <action name="actionHome">
+  <action name="actionAbout_Us">
    <property name="text">
-    <string>Home</string>
+    <string>About Us</string>
    </property>
   </action>
  </widget>
