--- a/frontPage/frontpage.ui
+++ b/frontPage/frontpage.ui
@@ -163,7 +163,7 @@
         <string notr="true">text-align: right;</string>
        </property>
        <property name="text">
-        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;ul style=&quot;margin-top: 0px; margin-bottom: 0px; margin-left: 0px; margin-right: 0px; -qt-list-indent: 1;&quot;&gt;&lt;li style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:14pt; font-weight:600;&quot;&gt;Input:&lt;/span&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt; Scanned Bangla Braille Image (format: jpg, png, jpeg)&lt;/span&gt;&lt;/li&gt;&lt;li style=&quot; margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:14pt; font-weight:600;&quot;&gt;Output:&lt;/span&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt; Corresponding Bangla Text (format: pdf, txt)&lt;/span&gt;&lt;br/&gt;&lt;/li&gt;&lt;li style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;Supports batch image processing&lt;/span&gt;&lt;/li&gt;&lt;li style=&quot; margin-top:0px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:14pt;&quot;&gt;Can detect joint letters and Bangla numbers &lt;/span&gt;&lt;/li&gt;&lt;/ul&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
        </property>
        <property name="textFormat">
         <enum>Qt::AutoText</enum>
@@ -202,7 +202,8 @@
      <property name="styleSheet">
       <string notr="true">background-image: url(:/logo/readingBackground.png);
 background-repeat: no-repeat;
-background-position: fill;</string>
+background-position: fill;
+width: 100%;</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout_2">
       <item>
@@ -281,7 +282,7 @@ background-position: fill;</string>
         <property name="sizeHint" stdset="0">
          <size>
           <width>20</width>
-          <height>79</height>
+          <height>70</height>
          </size>
         </property>
        </spacer>
