crash_bug_fixed

--- a/Resources.qrc
+++ b/Resources.qrc
@@ -9,5 +9,6 @@
         <file>logo/towidgetBackground.png</file>
         <file>logo/brand_logo.jpg</file>
         <file>style/stylesheet.css</file>
+        <file>Font/kalpurush.ttf</file>
     </qresource>
 </RCC>
