--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -499,7 +499,7 @@ padding: 5px 20px;
    </property>
    <widget class="QMenu" name="menuFiles">
     <property name="title">
-     <string>Files</string>
+     <string>File</string>
     </property>
     <addaction name="actionOpenFiles"/>
     <addaction name="actionAddFiles"/>
